Perkin-UAT/force-app/main/default/objects/Bulk_Transfer_Config__mdt/Bulk_Transfer_Config__mdt.object-meta.xml
<CustomObject>
    <label>Bulk Transfer Config</label>
    <pluralLabel>Bulk Transfer Configs</pluralLabel>
</CustomObject>