Perkin-UAT/force-app/main/default/objects/Bulk_Transfer_Config__mdt/fields/Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>Filter_Fields__c</fullName>
    <label>Filter Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>